Adding logic to process project objects, adding styles for project page, fixing router/link bug

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,13 @@
 {
-	"workbench.colorTheme": "High Contrast Theme"
+	"workbench.colorTheme": "High Contrast Theme",
+	"workbench.iconTheme": "vs-seti",
+	"workbench.colorCustomizations": {
+
+	},
+	"apc.electron": {
+		"opacity": 0.95,
+		"transparent": true,
+		"backgroundColor": "#00000000",
+		"vibrancy": "ultra-dark"
+	},
 }
