--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "cbrown-personal-portfolio",
   "version": "0.1.0",
+  "homepage": "https://collinbrown.me/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
